networking/iptables-rules/iptables-openvpn.v4
*filter

# Block NULL packages
-A INPUT -p tcp --tcp-flags ALL NONE -j DROP
# XMAS packet
-A INPUT -p tcp --tcp-flags ALL FIN,PSH,URG -j DROP
-A INPUT -p tcp --tcp-flags ALL ALL -j DROP
# Drop all new TCP conn that are not SYN (SYN flood)
-A INPUT -p tcp ! --syn -m conntrack --ctstate NEW -j DROP
# Drop INVALID packages
-A INPUT -m conntrack --ctstate INVALID -j DROP
# Rate limit new tcp conn (SYN flood)
-A INPUT -p tcp -m conntrack --ctstate NEW -m limit --limit <LIMIT_1>/second --limit-burst <LIMIT_2> -j ACCEPT
# SMURF attack. This is not necessary if blocking all icmp
-A INPUT -p icmp -m limit --limit <LIMIT_3>/second --limit-burst <LIMIT_4> -j ACCEPT

-A INPUT -i <TUN_INTERFACE> -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -i <PUBLIC_INTERFACE> -p tcp -s <SOURCE_IP> --dport <SSH_PORT> -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A INPUT -i <PUBLIC_INTERFACE> -p udp --dport 1194 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A INPUT -i <PRIVATE_INTERFACE> -p tcp --sport 10514 -m conntrack --ctstate ESTABLISHED -j ACCEPT

-A OUTPUT -o <TUN_INTERFACE> -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -o <PUBLIC_INTERFACE> -p tcp --sport <SSH_PORT> -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A OUTPUT -o <PUBLIC_INTERFACE> -p udp --sport 1194 -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A OUTPUT -o <PRIVATE_INTERFACE> -p tcp --dport 10514 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT

# Allow forwarding traffic only from the VPN interface (tun)
-A FORWARD -i <TUN_INTERFACE> -o <PRIVATE_INTERFACE> -s 10.8.0.0/24 -j ACCEPT
-A FORWARD -i <PRIVATE_INTERFACE> -o <TUN_INTERFACE> -j ACCEPT

-A INPUT -j DROP
-A FORWARD -j DROP
-A OUTPUT -j DROP

COMMIT
