networking/iptables-rules/iptables-webserver.v4
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]

# Block NULL packages
-A INPUT -p tcp --tcp-flags ALL NONE -j LOG --log-prefix "[IPTABLES: NULL PACKET BLOCK] " --log-level 4 -m limit --limit 3/min --limit-burst 10
-A INPUT -p tcp --tcp-flags ALL NONE -j DROP
# XMAS packet
-A INPUT -p tcp --tcp-flags ALL FIN,PSH,URG -j LOG --log-prefix "[IPTABLES: XMAS PACKET BLOCK] " --log-level 4 -m limit --limit 3/min --limit-burst 10
-A INPUT -p tcp --tcp-flags ALL FIN,PSH,URG -j DROP
-A INPUT -p tcp --tcp-flags ALL ALL -j LOG --log-prefix "[IPTABLES: XMAS PACKET BLOCK] " --log-level 4 -m limit --limit 3/min --limit-burst 10
-A INPUT -p tcp --tcp-flags ALL ALL -j DROP
# Drop all new TCP conn that are not SYN (SYN flood)
-A INPUT -p tcp ! --syn -m conntrack --ctstate NEW -j LOG --log-prefix "[IPTABLES: SYN FLOOD BLOCK] " --log-level 4 -m limit --limit 3/min --limit-burst 10
-A INPUT -p tcp ! --syn -m conntrack --ctstate NEW -j DROP
# Drop INVALID packages
-A INPUT -m conntrack --ctstate INVALID -j LOG --log-prefix "[IPTABLES: INVALID PACKET BLOCK] " --log-level 4 -m limit --limit 3/min --limit-burst 10
-A INPUT -m conntrack --ctstate INVALID -j DROP
# Rate limit new tcp conn (SYN flood)
-A INPUT -p tcp -m conntrack --ctstate NEW -m limit --limit <LIMIT_1>/second --limit-burst <LIMIT_2> -j ACCEPT
# SMURF attack. This is not necessary if blocking all icmp
-A INPUT -p icmp -m limit --limit <LIMIT_3>/second --limit-burst <LIMIT_4> -j ACCEPT

-A INPUT -i lo -j ACCEPT
-A INPUT -i <PRIVATE_INTERFACE> -p tcp -s <SOURCE_IP> --dport <SSH_PORT> -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A INPUT -i <PUBLIC_INTERFACE> -p tcp --dport 80 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A INPUT -i <PUBLIC_INTERFACE> -p tcp --dport 443 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A INPUT -o <PUBLIC_INTERFACE> -p tcp --sport 25 -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A INPUT -o <PUBLIC_INTERFACE> -p tcp --sport 465 -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A INPUT -o <PUBLIC_INTERFACE> -p tcp --sport 587 -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A INPUT -i <PRIVATE_INTERFACE> -p tcp -s <SOURCE_IP> --dport 3306 -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A INPUT -i <PRIVATE_INTERFACE> -p tcp --sport 10514 -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A INPUT -i <PRIVATE_INTERFACE> -p tcp -s <SOURCE_IP> --dport 10050 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT

-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -o <PRIVATE_INTERFACE> -p tcp --sport <SSH_PORT> -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A OUTPUT -o <PUBLIC_INTERFACE> -p tcp --sport 80 -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A OUTPUT -o <PUBLIC_INTERFACE> -p tcp --sport 443 -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A OUTPUT -o <PUBLIC_INTERFACE> -p tcp --dport 25 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -o <PUBLIC_INTERFACE> -p tcp --dport 465 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -o <PUBLIC_INTERFACE> -p tcp --dport 587 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -o <PRIVATE_INTERFACE> -p tcp --dport 3306 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -o <PRIVATE_INTERFACE> -p tcp --dport 10514 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -o <PRIVATE_INTERFACE> -p tcp --sport 10050 -m conntrack --ctstate ESTABLISHED -j ACCEPT

-A INPUT -j LOG --log-prefix "[IPTABLES: INPUT BLOCK] " --log-level 4 -m limit --limit 3/min --limit-burst 10
-A INPUT -j DROP
-A FORWARD -j LOG --log-prefix "[IPTABLES: FORWARD BLOCK] " --log-level 4 -m limit --limit 3/min --limit-burst 10
-A FORWARD -j DROP
-A OUTPUT -j LOG --log-prefix "[IPTABLES: OUTPUT BLOCK] " --log-level 4 -m limit --limit 3/min --limit-burst 10
-A OUTPUT -j DROP

COMMIT
